# razzle

./: .env.example  .gitignore  =7.0.0  AGENTS.md  BUGFIX-TRACKER.md  BUGS.md  CLAUDE.md  DEEP-AUDIT-TICKETS.md  DESIGN-QA-TICKETS.md  LOOP-TASKS.md  PLATFORM-LOOP-TASKS.md  PRESERVE.md  PROGRESS.md  QA-AUDIT.md  README.md  REFINER-LOG.md  ROADMAP.md  STAT-AUDIT-REPORT.md  TICKETS.md  UX-LOOP-TASKS.md  _chk_0.js  audit-ship-prompt.txt  bugfix-prompt.txt  campaign-plan.md  ceo-prompt.txt  ceo-review-log.md  designer-insights.md  designer-prompt.txt  designer-state.json  functional-prompt.txt  gtm-prompt.txt  index.html  loop-prompt-board.txt  loop-prompt-continuous.txt  loop-prompt-v2.txt  loop-prompt.txt  package-lock.json  package.json  pm-prompt.txt  pnpm-lock.yaml  (+22 more)
apps/api/: .env.example  alembic.ini  config.py  db.py  legacy_bridge.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/bots/: __init__.py  reddit_bot.py
apps/api/migrations/: env.py
apps/api/models/: __init__.py  agents.py  bureau.py  context.py  panels.py  players.py  screener.py
apps/api/routers/: __init__.py  agents.py  auth.py  billing.py  bureau.py  context.py  dev.py  explore.py  health.py  intel.py  panels.py  players.py
apps/api/services/: __init__.py  auth.py  billing.py  tier.py
apps/api/tests/: conftest.py  test_agents.py  test_briefing_export_format.py  test_briefing_og_route.py  test_briefing_share_link.py  test_bureau_h2h_og_codec.py  test_bureau_h2h_og_exported_sticker.py  test_bureau_h2h_og_gate_c_snapshot.py  test_bureau_h2h_og_preview_link.py  test_bureau_h2h_og_snapshot_codec.py  test_bureau_h2h_og_snapshot_league.py  test_bureau_h2h_rivalry_url.py  test_bureau_h2h_share_bar.py  test_bureau_h2h_snapshot_roundtrip.py  test_bureau_head_to_head.py  test_bureau_manager_profiles.py  test_bureau_monte_carlo.py  test_context.py  (+101 more)
(+2960 files in other folders)
