[project]
name = "razzle-api"
version = "2.0.0a1"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../../"]      # so `from apps.api.main import app` works
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]            # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"routers/*.py" = ["B008"]  # FastAPI Depends() in defaults is idiomatic
