[project]
name = "razzle-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.1",
  "fastapi>=0.115.12",
  "pydantic>=2.11.5",
  "pydantic-settings>=2.9.1",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "hypothesis>=6.135.2",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/razzle_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
